nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: egs-fuellink
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
